--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,56 @@
-<input>
-<input>
-<button (click)="iniciarSesion('','')">Iniciar sesion</button>
+<head>
+	<title>My Awesome Login Page</title>
+    <link href='https://fonts.googleapis.com/css?family=Josefin%20Sans' rel='stylesheet'>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+</head>
+<body >
+	<div>
+		<div class="container-fluid d-flex justify-content-center  ">
+			<div class="user_card">
+				<div class="d-flex justify-content-center">
+					<div class="brand_logo_container">
+                      
+						<img src="https://cdn.freebiesupply.com/logos/large/2x/pinterest-circle-logo-png-transparent.png" class="brand_logo" alt="Logo">
+
+                        <label id="label-register" for="log-reg-show">Bienvenido a Crearte</label>
+					</div>
+				</div>
+				<div class="d-flex justify-content-center container-fluid form_container">
+					<form>
+                        
+                        <label id="label-Email" for="log-reg-show">Correo</label> 
+						<div class="input-group mb-3">
+
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-user"></i></span>
+							</div>
+                            
+							<input type="text" name="" class="form-control input_user" value="" placeholder="Tu Email">
+						</div>
+                        <label id="label-Password" for="log-reg-show">Contraseña</label>
+						<div class="input-group mb-2">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-key"></i></span>
+							</div>
+
+							<input type="password" name="" class="form-control input_pass" value="" placeholder="Tu contraseña">
+                            
+						</div>
+						<div class="form-group">
+							<div class="custom-control custom-checkbox">
+								<input type="checkbox" class="custom-control-input" id="customControlInline">
+								<label class="custom-control-label" for="customControlInline">Remember me</label>
+							</div>
+						</div>
+							<div class="d-flex justify-content-center mt-3 login_container">
+                                <button type="button" name="button" class="btn login_btn" (click)="iniciarSesion('','')">Iniciar sesion</button> 
+				            </div>
+					</form>
+				</div>
+		
+			
+			</div>
+		</div>
+	</div>
+</body>
