--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,8 @@
 <head>
 	<title>My Awesome Login Page</title>
-    <link href='https://fonts.googleapis.com/css?family=Josefin%20Sans' rel='stylesheet'>
+    <link href='link href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@1,500&display=swap" rel="stylesheet"'>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body >
@@ -11,7 +12,7 @@
 				<div class="d-flex justify-content-center">
 					<div class="brand_logo_container">
                       
-						<img src="https://cdn.freebiesupply.com/logos/large/2x/pinterest-circle-logo-png-transparent.png" class="brand_logo" alt="Logo">
+						<img src="assets/images/logoM.png" class="brand_logo" alt="Logo">
 
                         <label id="label-register" for="log-reg-show">Bienvenido a Crearte</label>
 					</div>
