singin form waiting for finish (send data to the backend) Angular materials added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
 <app-navbar (window)="setWindow($event)"></app-navbar>
+<div [ngSwitch]="window" class="content-container">
+    <app-singin *ngSwitchDefault></app-singin>
+</div>
