--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,20 @@
 body{
     margin: 0%;
     padding: 0%;
-    width: 100vw;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
+    font-size: 16px;
     align-items: center;
 }
+
+button:hover{
+    opacity: 0.7;
+}
+
+button:disabled{
+    opacity: 0.7;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
