--- a/src/app/components/common/loading/loading.component.html
+++ b/src/app/components/common/loading/loading.component.html
@@ -1,13 +1,7 @@
-
-<h2 mat-dialog-title>Prueba</h2>
-
-<mat-dialog-content >
-  
-    <input>
- 
-</mat-dialog-content>
-
-<mat-dialog-actions>
-    <button class="mat-raised-button">Close</button>
-    <button class="mat-raised-button mat-primary">Save</button>
-</mat-dialog-actions>
+<div>
+  <h2 mat-dialog-title>Por favor espera</h2>
+    <br/>
+  <mat-dialog-content>
+    <mat-spinner></mat-spinner>
+  </mat-dialog-content>
+</div>
