--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,18 @@
-body{
+body {
     margin: 0%;
     padding: 0%;
     width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    height: fit-content;
+    flex-flow: wrap;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     font-size: 16px;
     align-items: center;
 }
 
-button:hover{
+button:hover , button:disabled{
     opacity: 0.7;
 }
 
-button:disabled{
-    opacity: 0.7;
-}
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
