product bougths created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar (window)="setWindow($event)"></app-navbar>
 <div [ngSwitch]="window" class="content-container">
-    <app-singin *ngSwitchDefault></app-singin>
+    <app-singin *ngSwitchCase="'singin'"></app-singin>
+    <app-products-bougth *ngSwitchCase="'bougths'"></app-products-bougth>
 </div>
