shoping cart added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <div [ngSwitch]="window" class="content-container">
     <app-singin *ngSwitchCase="'singin'"></app-singin>
     <app-products-bougth *ngSwitchCase="'bougths'"></app-products-bougth>
+    <app-shoping-cart *ngSwitchDefault></app-shoping-cart><!--*ngSwitchCase="'shopping'" -->
 </div>
