--- a/src/app/components/shoping-cart/shoping-cart.component.html
+++ b/src/app/components/shoping-cart/shoping-cart.component.html
@@ -1,51 +1,39 @@
 <div class="shoing-cart-container">
   <h2>Carrito de compras</h2>
-  <table>
-    <div>
-      <tr>
-        <td>
-
-        </td>
-        <td>
-          imagen
-        </td>
-        <td>
-          nombre
-        </td>
-        <td>
-          Precio
-        </td>
-        <td>
-          Cantidad
-        </td>
-        <td>
-          Precio unitario
-        </td>
-      </tr>
-    </div>
-    <div>
-      <tr *ngFor="let product of products">
-        <td>
-          <mat-icon>delete</mat-icon>
-        </td>
-        <td>
-          <img src="{{product.photoUrl}}">
-        </td>
-        <td>
-          {{product.name}}
-        </td>
-        <td>
-          {{product.price * product.quantity}}
-        </td>
-        <td>
-          {{product.quantity}}
-        </td>
-        <td>
-          {{product.price}}
-        </td>
-      </tr>
-    </div>
+  <table class="content-container">
+    <tr class="border">
+      <th class="product">
+        Producto
+      </th>
+      <th class="info">
+        Precio
+      </th>
+      <th class="info">
+        Cantidad
+      </th>
+      <th class="info">
+        Precio unitario
+      </th>
+    </tr>
+    <tr *ngFor="let product of products">
+      <td class="product"> 
+        <mat-icon (click)="delete(product.id)">delete</mat-icon>
+        <img src="{{product.photoUrl}}" class="product-image">
+        <p>{{product.name}}</p>
+      </td>
+      <td class="info">
+        {{product.price * product.quantity}}
+      </td>
+      <td class="info">
+        {{product.quantity}}
+      </td>
+      <td class="info">
+        {{product.price}}
+      </td>
+    </tr>
   </table>
-  <p>Total: ${{total}}</p>
-  <button>Comprar</button>
+  <div class="buy-container">
+    <h4>Total: ${{total}}</h4>
+    <button>Comprar</button>
+  </div>
 </div>
