product component and product list created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <div [ngSwitch]="window" class="content-container">
     <app-singin *ngSwitchCase="'singin'"></app-singin>
     <app-products-bougth *ngSwitchCase="'bougths'"></app-products-bougth>
-    <app-shoping-cart *ngSwitchDefault></app-shoping-cart><!--*ngSwitchCase="'shopping'" -->
+    <app-shoping-cart *ngSwitchCase="'shopping'"></app-shoping-cart><!--*ngSwitchCase="'shopping'" -->
+    <app-catalogue *ngSwitchCase="'catalogue'"></app-catalogue>
 </div>
