--- a/src/app/components/catalogue/catalogue.component.html
+++ b/src/app/components/catalogue/catalogue.component.html
@@ -1,1 +1,5 @@
-<p>catalogue works!</p>
+<div class="products-container">
+    <div *ngFor="let product of products">
+        <app-product [item]="product"></app-product>
+    </div>
+</div>
