--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
     <app-products-bougth *ngSwitchCase="'bougths'"></app-products-bougth>
     <app-shoping-cart *ngSwitchDefault></app-shoping-cart><!--*ngSwitchCase="'shopping'" -->
 </div>
+<app-footer></app-footer>
