--- a/src/app/components/shoping-cart/shoping-cart.component.html
+++ b/src/app/components/shoping-cart/shoping-cart.component.html
@@ -34,6 +34,6 @@
   </table>
   <div class="buy-container">
     <h4>Total: ${{total}}</h4>
-    <button>Comprar</button>
+    <button (click)="buy()">Comprar</button>
   </div>
 </div>
