--- a/src/app/components/catalogue/catalogue.component.html
+++ b/src/app/components/catalogue/catalogue.component.html
@@ -1,5 +1,5 @@
 <div class="products-container">
     <div *ngFor="let product of products">
-        <app-product [item]="product"></app-product>
+        <app-product [item]="product" (click)="setWindow(product)"></app-product>
     </div>
 </div>
