--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,13 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-}
-/*:::::Pie de Pagina*/
 .pie-pagina{
-    width: 99vw;
+    width: 100%;
     background-color: #0a141d;
 }
 .pie-pagina .grupo-1{
@@ -63,6 +55,7 @@
 .pie-pagina .grupo-2 small{
     font-size: 15px;
 }
+
 @media screen and (max-width:800px){
     .pie-pagina .grupo-1{
         width: 90%;
