--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,79 +1,47 @@
-	
-    body {
-        margin: 2px !important;
-        padding: 15% !important;
-        height: 100%;
-        background: #ffffff !important;
-        min-height: 100vh;
-        
-    }
-    .user_card {
-        height: 100%;
-        width: 500px;
-        margin-top: auto;
-        margin-bottom: auto;
-        background: #ffffff;
-        position:relative;
-        display: flex;
-        border: 2px solid #01A896;
-        justify-content: center;
-        flex-direction: column;
-        font-family: 'Familjen Grotesk', sans-serif;
-        padding: 10px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        border-radius: 5px;
-        
+.register {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 30vw;
+}
 
-    }
-   
-    .brand_logo_container {
-        position: absolute;
-        height: 170px;
-        width: 170px;
-        top: -75px;
-        border-radius: 50%;
-        background: #01A896;
-        padding: 10px;
-        text-align: center;
-        
-    }
-    .brand_logo {
-        height: 150px;
-        width: 150px;
-        border-radius: 50%;
-        border: 2px solid white;
-    }
-    .form_container {
-        margin-top: 100px;
-        justify-content: center;
-        flex-direction: column;
-    }
-    .login_btn {
-        width: 100%;
-        background: #01A896 !important;
-        color: rgb(255, 255, 255) !important;
-    }
-    .login_btn:focus {
-        box-shadow: none !important;
-        outline: 0px !important;
-    }
-    .login_container {
-        padding: 0 2rem;
-    }
-    .input-group-text {
-        background: #01A896 !important;
-        color: rgb(255, 255, 255) !important;
-        border: 0 !important;
-        border-radius: 0.25rem 0 0 0.25rem !important;
-        font-family: 'Familjen Grotesk', sans-serif;
-    }
-    .input_user,
-    .input_pass:focus {
-        box-shadow: none !important;
-        outline: 0px !important;
-    }
-    .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
-        background-color: #c0392b !important;
-    }
+.register h1 {
+    align-self: center;
+    color: #05668d;
+}
+
+.register label{
+    color: #05668d;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.register input {
+    padding: 10px;
+    margin: 6px 0px 6px 0px;
+    border-radius: 5px;
+    border: 1px solid #01a896;
+}
+
+.register input::placeholder {
+    color: #01a896;
+}
+
+.register input:focus {
+    outline:#01a896;
+}
+
+.register button {
+    padding: 10px;
+    align-self: flex-end;
+    margin: 10px;   
+    color: white;
+    background-color: #01a896;
+    border: none;  
+    border-radius: 5px;
+}
+
+.register small {
+    color: red;
+}
+
