--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,53 +1,19 @@
-<head>
-	<title>My Awesome Login Page</title>
-</head>
-<body>
-	<div>
-		<div class="container-fluid d-flex justify-content-center">
-			<div class="user_card">
-				<div class="d-flex justify-content-center">
-					<div class="brand_logo_container">
-                      
-						<img src="assets/images/logoM.png" class="brand_logo" alt="Logo">
+<form class="register" [formGroup]="form">
+    <h1>Iniciar sesión</h1>
+    <label>Ingresa tu dirección de correo electronico*</label>
+    <input placeholder="estoesunejemplo@tucorreo.com" formControlName="email" type="email" />
+    <small *ngIf="form.get('email')?.hasError('required') && form.get('email')?.dirty">Este campo es obligatorio</small>
+    <small *ngIf="form.get('email')?.hasError('email') && form.get('email')?.dirty">Ingresa una dirección de email
+      valida</small>
+    <label>Ingresa tu contraseña*</label>
+    <input placeholder="Ingresa tu contraseña" formControlName="password" type="password" />
+    <small *ngIf="form.get('password')?.hasError('required') && form.get('password')?.dirty">Este campo es
+      obligatorio</small>
+    <small *ngIf="form.get('password')?.hasError('minlength') && form.get('password')?.dirty">La contraseña debe tener
+      como minimo 6 caracteres</small>
+    <small *ngIf="form.get('password')?.hasError('maxlength') && form.get('password')?.dirty">La contraseña solamente
+      puede tener un máximo de 100 caracteres</small>
 
-                        <label id="label-register" for="log-reg-show">Bienvenido a Crearte</label>
-					</div>
-				</div>
-				<div class="d-flex justify-content-center container-fluid form_container">
-					<form>
-                        
-                        <label id="label-Email" for="log-reg-show">Correo</label> 
-						<div class="input-group mb-3">
-
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
-							</div>
-                            
-							<input type="text" name="" class="form-control input_user" value="" placeholder="Tu Email">
-						</div>
-                        <label id="label-Password" for="log-reg-show">Contraseña</label>
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
-							</div>
-
-							<input type="password" name="" class="form-control input_pass" value="" placeholder="Tu contraseña">
-                            
-						</div>
-						<div class="form-group">
-							<div class="custom-control custom-checkbox">
-								<input type="checkbox" class="custom-control-input" id="customControlInline">
-								<label class="custom-control-label" for="customControlInline">Remember me</label>
-							</div>
-						</div>
-							<div class="d-flex justify-content-center mt-3 login_container">
-                                <button type="button" name="button" class="btn login_btn" (click)="iniciarSesion('','')">Iniciar sesion</button> 
-				            </div>
-					</form>
-				</div>
-		
-			
-			</div>
-		</div>
-	</div>
-</body>
+    <small *ngIf="form.get('confirmPassword')?.value != form.get('password')?.value && (form.get('confirmPassword')?.dirty && form.get('password')?.dirty)">Las contraseñas no son iguales</small>
+    <button [disabled]="form.invalid" type="button" (click)="login()">Iniciar sesión</button>
+  </form>
