--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navstyle">
   <div>
-    <p>Crearte</p>
+    <p><b>Crearte</b></p>
     <p (click)="setWindow('catalogue')" type="button">Catalogo</p>
     <p (click)="setWindow('custom')">Personalizado</p>
   </div>
