--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -1,6 +1,24 @@
-.product-container{
+.product-container {
     display: flex;
     flex-direction: column;
-    width: 10vw;
-    height: 10vh;
+    width: fit-content;
+    height: fit-content;
+    box-shadow: 0px 0px 5px black;
+    margin: 10px;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+.product-container img {
+    width: 20vh;
+    height: 20vw;
+}
+
+.name {
+    color: #05668d;
+}
+
+.price{
+    color: #01a896;
 }
